--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+qwlroots (0.4.3) UNRELEASED; urgency=medium
+
+  * bump version to 0.4.3
+
+ -- Groveer <guoyao@uniontech.com>  Mon, 11 Nov 2024 19:10:14 +0800
+
 waylib (0.1.1) UNRELEASED; urgency=medium
 
   * Exclude client self when request grab keyboard on virtual keyboard.
