--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,14 @@
-qwlroots (0.4.3) UNRELEASED; urgency=medium
+waylib (0.5.0) unstable; urgency=medium
+
+  * bump version to 0.5.0
+
+ -- Groveer <guoyao@uniontech.com>  Thu, 14 Nov 2024 03:27:45 +0000
+
+waylib (0.4.3) unstable; urgency=medium
 
   * bump version to 0.4.3
 
- -- Groveer <guoyao@uniontech.com>  Mon, 11 Nov 2024 19:10:14 +0800
+ -- Groveer <guoyao@uniontech.com>  Thu, 14 Nov 2024 03:26:56 +0000
 
 waylib (0.1.1) UNRELEASED; urgency=medium
 
