--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+waylib (0.6.1) unstable; urgency=medium
+
+  * bump version to 0.6.1
+
+ -- Groveer <guoyao@uniontech.com>  Fri, 22 Nov 2024 18:06:22 +0800
+
 waylib (0.6.0) unstable; urgency=medium
 
   * bump version to 0.6.0
