--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+waylib (0.6.2) unstable; urgency=medium
+
+  * bump version to 0.6.2
+
+ -- Groveer <guoyao@uniontech.com>  Tue, 26 Nov 2024 18:48:43 +0800
+
 waylib (0.6.1) unstable; urgency=medium
 
   * bump version to 0.6.1
