--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+waylib (0.6.3) unstable; urgency=medium
+
+  * bump version to 0.6.3
+
+ -- Groveer <guoyao@uniontech.com>  Fri, 29 Nov 2024 15:44:40 +0800
+
 waylib (0.6.2) unstable; urgency=medium
 
   * bump version to 0.6.2
