--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+waylib (0.6.6) unstable; urgency=medium
+
+  * bump version to 0.6.6
+
+ -- Groveer <guoyao@uniontech.com>  Tue, 10 Dec 2024 18:26:33 +0800
+
 waylib (0.6.5) unstable; urgency=medium
 
   * bump version to 0.6.5
