--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+waylib (0.6.7) unstable; urgency=medium
+
+  * bump version to 0.6.7
+
+ -- Groveer <guoyao@uniontech.com>  Fri, 13 Dec 2024 14:08:45 +0800
+
 waylib (0.6.6) unstable; urgency=medium
 
   * bump version to 0.6.6
