--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+waylib (0.6.9) unstable; urgency=medium
+
+  * bump version to 0.6.9
+
+ -- Groveer <guoyao@uniontech.com>  Fri, 20 Dec 2024 15:48:51 +0800
+
 waylib (0.6.8) unstable; urgency=medium
 
   * bump version to 0.6.8
