--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+waylib (0.6.10) unstable; urgency=medium
+
+  * bump version to 0.6.10
+
+ -- Groveer <guoyao@uniontech.com>  Wed, 25 Dec 2024 18:45:12 +0800
+
 waylib (0.6.9) unstable; urgency=medium
 
   * bump version to 0.6.9
